# watermarker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/utils/: intersection.cpp  intersection.hpp
src/: commands.hpp  first_window.cpp  first_window.hpp  image_viewer.cpp  image_viewer.hpp  main.cpp  main_window.cpp  main_window.hpp  printer.cpp  printer.hpp  second_window.cpp  second_window.hpp  window_watcher.cpp  window_watcher.hpp  wm_widget.cpp  wm_widget.hpp
